make inputs smaller on filter make gridWide 98% to prevent overlap

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -194,5 +194,5 @@ input.searchButton {
 }
 
 input.gridWide {
-  width: 100%;
+  width: 98%;
 }
